<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/Home"
            android:icon="@drawable/ic_baseline_home_24"/>
        <item
            android:id="@+id/nav_maps"
            android:title="@string/Maps"
            android:icon="@drawable/ic_baseline_map_24"/>
        <item
            android:id="@+id/nav_logout"
            android:title="@string/Logout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"/>
    </group>


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_report"
            android:title="Complaint"
            android:icon="@drawable/ic_baseline_report_24"/>
    </group>



</menu>