<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userdashboard.UserDashboard"
    tools:openDrawer="start">


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/background_dashboard"
        app:headerLayout="@layout/menu_header"
        app:itemTextColor="@color/white_off"
        app:itemIconTint="#cccccc"
        app:menu="@menu/main_menu"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e3e3e3"
        android:orientation="vertical">
        <!-- first section -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <ImageView
                android:id="@+id/imageView"
                android:clickable="true"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/ic_baseline_dehaze_24" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="#cccccc"
                android:padding="5dp"
                android:onClick="callPostActivity"
                app:srcCompat="@drawable/ic_baseline_add_24" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- get to bin section-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="15dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/headline"
                        android:textColor="@color/white_off"
                        android:textSize="28dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_marginTop="70dp">

                        <ImageView
                            android:layout_width="fill_parent"
                            android:layout_height="150dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/map3" />

                    </RelativeLayout>


                </RelativeLayout>

                <!-- location icon section  -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="15dp"
                            android:background="@drawable/card_1"
                            android:elevation="6dp">

                            <ImageView
                                android:id="@+id/iv1"
                                android:onClick="Campus"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/univ" />


                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/campus"
                            android:textAlignment="center"
                            android:textSize="12dp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="15dp"
                            android:background="@drawable/card_2"
                            android:elevation="6dp">

                            <ImageView
                                android:id="@+id/iv2"
                                android:onClick="ubelly"
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/food" />


                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/ub"
                            android:textAlignment="center"
                            android:textSize="12dp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="15dp"
                            android:background="@drawable/card_3"
                            android:elevation="6dp">


                            <ImageView
                                android:id="@+id/iv3"
                                android:onClick="bhostel"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/boy" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/boys"
                            android:textAlignment="center"
                            android:textSize="12dp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="15dp"
                            android:background="@drawable/card_4"
                            android:elevation="6dp">

                            <ImageView
                                android:id="@+id/iv4"
                                android:onClick="ghostel"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/girl" />


                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/girls"
                            android:textAlignment="center"
                            android:textSize="12dp" />


                    </LinearLayout>


                </LinearLayout>
                <!-- Recyclerview section -->

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:background="#e3e3e3">

                    <LinearLayout
                        android:id="@+id/featured_background"
                        android:layout_width="154dp"
                        android:layout_height="300dp"
                        android:layout_margin="10dp"
                        android:background="#CCCCCC"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="30dp"
                            android:text="@string/most_dirty_location"
                            android:textAllCaps="true"
                            android:textColor="@color/white_off"
                            android:textSize="24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/location_brief"
                            android:textColor="#5c5656"></TextView>

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/featured_recycler"
                        android:layout_width="wrap_content"
                        android:layout_height="320dp"
                        android:layout_toRightOf="@id/featured_background" />
                </RelativeLayout>

                <!-- Complains -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/background_dashboard"
                    android:orientation="vertical"
                    android:padding="20dp">
                    <!-- complain - heading portion -->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/complaints"
                            android:textAllCaps="true"
                            android:textColor="@color/complaints_heading"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:text=" View all " />
                    </RelativeLayout>
                    <!-- complain - recyclerview section -->
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/complaint_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="300dp" />
                </LinearLayout>


            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>